--- a/twitter-web/package.json
+++ b/twitter-web/package.json
@@ -9,10 +9,18 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.6",
+    "@apollo/react-hooks": "^4.0.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.2.1",
+    "@mui/material": "^5.2.3",
     "graphql": "^16.1.0",
+    "graphql-upload": "^13.0.0",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
