--- a/mongodb/package.json
+++ b/mongodb/package.json
@@ -19,6 +19,7 @@
     "graphql": "^15.8.0",
     "graphql-subscriptions": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^6.1.1",
     "subscriptions-transport-ws": "^0.11.0",
     "validator": "^13.7.0"
