--- a/twitter-web/package.json
+++ b/twitter-web/package.json
@@ -18,10 +18,17 @@
     "@mui/material": "^5.2.4",
     "graphql": "^16.1.0",
     "graphql-upload": "^13.0.0",
+    "jwt-decode": "^3.1.2",
     "next": "12.0.7",
+    "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-loader-spinner": "^4.0.0",
+    "react-redux": "^7.2.6",
+    "react-router": "^6.2.1",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4"
   },
