--- a/twitter-web/package.json
+++ b/twitter-web/package.json
@@ -20,6 +20,7 @@
     "graphql-upload": "^13.0.0",
     "jwt-decode": "^3.1.2",
     "next": "12.0.7",
+    "next-auth": "^4.0.5",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
