--- a/twitter-web/package.json
+++ b/twitter-web/package.json
@@ -16,9 +16,13 @@
     "@mui/icons-material": "^5.2.1",
     "@mui/lab": "^5.0.0-alpha.60",
     "@mui/material": "^5.2.4",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
     "graphql": "^16.1.0",
+    "graphql-request": "^3.7.0",
     "graphql-upload": "^13.0.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "next": "12.0.7",
     "next-auth": "^4.0.5",
     "next-redux-wrapper": "^7.0.5",
